<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    tools:context=".ActivityView">

    <TextView
        android:id="@+id/tv_activity_title"
        android:text="@string/client_detail"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_weight="0.8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_id_cliente"
        android:text="@string/id"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_id_cliente"
        android:textColor="@color/colorAccent"
        android:hint="@string/id"
        android:enabled="false"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_nombre"
        android:text="@string/name"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_nombre"
        android:hint="@string/name"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_apellido_paterno"
        android:text="@string/father_last_name"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_apellido_paterno"
        android:hint="@string/father_last_name"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_apellido_materno"
        android:text="@string/mother_last_name"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_apellido_materno"
        android:hint="@string/mother_last_name"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_telefono"
        android:text="@string/telephone"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_telefono"
        android:hint="@string/telephone"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_calle"
        android:text="@string/street"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_calle"
        android:hint="@string/street"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_colonia"
        android:text="@string/colony"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_colonia"
        android:hint="@string/colony"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_municipio"
        android:text="@string/town"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_municipio"
        android:hint="@string/town"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_longitud"
        android:text="@string/longitude"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_longitud"
        android:hint="@string/longitude"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_latitud"
        android:text="@string/latitude"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_latitud"
        android:hint="@string/latitude"
        android:textColor="@color/colorAccent"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_imagen"
        android:text="@string/image"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_imagen"
        android:layout_width="300dp"
        android:layout_height="300dp"
        tools:ignore="InvalidId" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_editar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/update" />

        <Button
            android:id="@+id/btn_borrar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>