<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    tools:context=".ActivityInsert">

    <TextView
        android:id="@+id/tv_activity_title_ai"
        android:text="@string/insert_client"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_weight="0.8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <TextView
                android:id="@+id/tv_nombre_ai"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_nombre_ai"
                android:hint="@string/name"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_apellido_paterno_ai"
                android:text="@string/father_last_name"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_apellido_paterno_ai"
                android:hint="@string/father_last_name"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_apellido_materno_ai"
                android:text="@string/mother_last_name"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_apellido_materno_ai"
                android:hint="@string/mother_last_name"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_telefono_ai"
                android:text="@string/telephone"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_telefono_ai"
                android:hint="@string/telephone"
                android:textColor="@color/colorAccent"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_calle_ai"
                android:text="@string/street"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_calle_ai"
                android:hint="@string/street"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_colonia_ai"
                android:text="@string/colony"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_colonia_ai"
                android:hint="@string/colony"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_estado_ai"
                android:text="@string/state"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_estado_ai"
                android:hint="@string/state"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_municipio_ai"
                android:text="@string/town"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_municipio_ai"
                android:hint="@string/town"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_longitud_ai"
                android:text="@string/longitude"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_longitud_ai"
                android:hint="@string/longitude"
                android:textColor="@color/colorAccent"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_latitud_ai"
                android:text="@string/latitude"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_latitud_ai"
                android:hint="@string/latitude"
                android:textColor="@color/colorAccent"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_imagen_ai"
                android:text="@string/image"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_imagen_ai"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:hint="@string/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_editar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="btn_insertOnClick"
            android:text="@string/insert" />

    </LinearLayout>
</LinearLayout>